[project]
name = "coco-segmentation"
version = "0.1.0"
description = "COCO subset segmentation training with U-Net"
dependencies = [
    "matplotlib==3.7.5",
    "numpy==1.24.3",
    "Pillow==10.4.0",
    "requests==2.32.3",
    "torch==2.4.0+cu121",
    "torchvision==0.19.1+cu121",
    "tqdm==4.66.5",
    "pycocotools==2.0"
]

[tool.uv]
python = "3.8.10"
